--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ Claudio's Website
 </title>
 </head>
 <body>
-  <p>
-    Hello World
-  </p>
+  <p> Hello World </p>
 
   <p> This Website is under construction </p>
+
+  <button> this is a button </button>
  </body>
 </html>
