--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@ Claudio's Website
 
   <p> This Website is under construction </p>
 
-  <button> this is a button </button>
+  <button type = "button"> this is a button </button>
  </body>
 </html>
