--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    body{
+      background-color: #FFAE8F;    
+    }
+  </style>
   <link rel="icon" href="favicon.png">
 <title>
 Claudio's Website
