--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
     }
   </style>
   <link rel="icon" href="favicon.png">
-<title>
-Claudio's Website
-</title>
+  <title>
+    Claudio's Website
+  </title>
 </head>
 <body>
-  <p> Hello World </p>
+  <p style=
+  "font-family:Arial, Helvetica, sans-serif;
+  font-size:25px;
+  text-align:center;
+  color: azure
+  ;"
+  > 
+    Hello World 
+  </p>
 
-  <p> This Website is under construction </p>
+  <p style="text-align:center"> This Website is under construction </p>
 
   <button type = "button"> this is a button </button>
  </body>
