--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <html>
+  
 <head>
   <title>
     Claudio's Website
@@ -16,6 +17,14 @@ border-width: 10px;
 border-left-width: 10px;
 border-right-width:10px;
 border-color:#090057;">
+<nav style = "padding: 10px;
+background-color: #c400c6;
+text-align: center;">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>  
+</nav>
   <h1 style="font-family:Arial, Helvetica, sans-serif;
   font-size:25px;
   text-align:center;
