Added blog template

--- a/index.html
+++ b/index.html
@@ -2,50 +2,38 @@
 
 <!DOCTYPE html>
 <html>
-  
-<head>
-  <title>
-    Claudio's Website
-  </title>
-</head>
-<body style = 
-"background-color:#57007e;
-margin: 0px;
-padding: 10px;
-border-style: solid;
-border-width: 10px;
-border-left-width: 10px;
-border-right-width:10px;
-border-color:#090057;">
-  <h1 style="font-family:Arial, Helvetica, sans-serif;
-  font-size:25px;
-  text-align:center;
-  color: azure;
-  background-color:#ffa069;
+  <head>
+    <title>
+      Claudio's Website
+    </title>
+  </head>
+  <body style = 
+  "background-color:#57007e;
   margin: 0px;
-  padding: 20px;
+  padding: 10px;
   border-style: solid;
   border-width: 10px;
   border-left-width: 10px;
   border-right-width:10px;
-  border-color:#c400c6;"
-  
-  > 
-    Hello World 
-</h1>
+  border-color:#090057;">
+  <nav>
+    <a href="blogs/2020-02-25-blog1.html">go to a better page</a>
+  </nav>
+    <h1 style="font-family:Arial, Helvetica, sans-serif;
+    font-size:25px;
+    text-align:center;
+    color: azure;
+    background-color:#ffa069;
+    margin: 0px;
+    padding: 20px;
+    border-style: solid;
+    border-width: 10px;
+    border-left-width: 10px;
+    border-right-width:10px;
+    border-color:#c400c6;"
+    > 
+      Hello World! Welcome to my website
+  </h1>
 
-  <h2 style="text-align:center;color: azure;"> This Website is under construction </h2>
-
-  <p style="text-align:justify;color: azure;"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique orci vel finibus sagittis. Aenean convallis lorem at ante facilisis, aliquam tincidunt est efficitur. Curabitur neque justo, consectetur maximus vestibulum ac, malesuada in velit. Suspendisse sit amet lacus consectetur, bibendum sapien eu, molestie est. Donec sit amet metus tristique, aliquet orci et, mollis felis. Duis ultricies lacinia est, quis tristique velit tristique eu. Morbi vitae iaculis enim. Aenean lacus tortor, tristique in leo eget, dictum placerat ligula. Nulla facilisi. Sed vitae bibendum nisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam id molestie eros. Donec id efficitur neque. </p>
-
-  <p style="text-align:justify;color: azure;"> Nulla imperdiet nisi at ipsum maximus dignissim. Duis ullamcorper ex eget libero dapibus dapibus. Morbi et bibendum sem. Fusce tellus metus, commodo quis ligula ac, mattis mattis sem. Pellentesque dolor velit, semper ac aliquam luctus, malesuada ac turpis. Mauris ligula turpis, lacinia non elit vitae, mattis vehicula orci. Sed malesuada elit et tellus rhoncus pretium. Proin efficitur enim justo. In convallis et massa eu bibendum. Nam eleifend nisi vitae neque posuere, vel blandit nisl viverra. Aenean non lobortis lacus, non tristique elit.  </p>
-
-  <p style="text-align:justify;color: azure;"> Integer posuere molestie ante. Proin ultrices, enim id malesuada finibus, sapien sem commodo lectus, sit amet ultrices elit sem ac nunc. Duis eget nibh id velit fringilla placerat. Sed hendrerit ante at quam bibendum, lobortis lacinia arcu vestibulum. Donec suscipit enim in justo fringilla, eget consequat lacus efficitur. Nam malesuada, erat iaculis vulputate eleifend, orci neque posuere augue, aliquam rutrum ligula turpis dignissim justo. Integer porttitor odio quis justo fringilla venenatis.  </p>
-
-  <p style="text-align:justify;color: azure;"> Duis nec dui egestas, fringilla urna et, ultricies elit. Duis nec sollicitudin ipsum. Pellentesque eu massa vel nisi condimentum tincidunt nec ut arcu. Etiam in vehicula nisi. Vestibulum hendrerit condimentum dolor. In scelerisque justo ac urna porta, et pretium eros placerat. Donec hendrerit libero id porttitor interdum. Nullam non urna sed libero cursus ullamcorper. Maecenas a massa convallis, volutpat dolor nec, porttitor ipsum. Morbi vitae felis ac est interdum efficitur.  </p>
-
-  <p style="text-align:justify;color: azure;"> Etiam sodales maximus venenatis. Sed at dui rhoncus, semper libero a, posuere ligula. Suspendisse porta congue nulla eget molestie. Cras auctor, ligula quis semper luctus, mi orci molestie arcu, sit amet suscipit diam leo eu lacus. Proin dui odio, volutpat in commodo porta, porttitor vitae nisl. Phasellus bibendum urna nec blandit tempor. Quisque nulla eros, pharetra id urna id, lobortis semper tellus. Cras hendrerit nibh quam, id sagittis libero vestibulum non. In nulla nisi, sollicitudin sodales ligula ut, fermentum accumsan dolor. Morbi felis velit, bibendum eu luctus et, efficitur malesuada mi.  </p>
-
-  <button type = "button"> this is a button </button>
- </body>
+  </body>
 </html>
