--- a/index.html
+++ b/index.html
@@ -8,32 +8,37 @@
     </title>
   </head>
   <body style = 
-  "background-color:#57007e;
+  "background-color:#b52b65;
   margin: 0px;
   padding: 10px;
   border-style: solid;
   border-width: 10px;
   border-left-width: 10px;
   border-right-width:10px;
-  border-color:#090057;">
-  <nav>
-    <a href="blogs/2020-02-25-blog1.html">go to a better page</a>
+  border-color:#621055;">
+  <nav style = "padding: 5px; background-color: #ed6663;">
+    <a href="blogs/blog-index.html">About</a>
+    <a href="blogs/blog-index.html">Blogs</a>
+    <a href="images/Gallery-index.html">Gallery</a>
   </nav>
+  
+  <article>
     <h1 style="font-family:Arial, Helvetica, sans-serif;
-    font-size:25px;
-    text-align:center;
-    color: azure;
-    background-color:#ffa069;
-    margin: 0px;
-    padding: 20px;
-    border-style: solid;
-    border-width: 10px;
-    border-left-width: 10px;
-    border-right-width:10px;
-    border-color:#c400c6;"
-    > 
-      Hello World! Welcome to my website
-  </h1>
-
+      font-size:25px;
+      text-align:center;
+      color: azure;
+      background-color:#ffa372;
+      margin: 0px;
+      padding: 20px;
+      border-style: solid;
+      border-width: 10px;
+      border-left-width: 10px;
+      border-right-width:10px;
+      border-color:#ed6663;"
+      > 
+        Hello World! Welcome to my website
+    </h1>
+  </article>
+  
   </body>
 </html>
