--- a/blogs/2020-02-25-blog1.html
+++ b/blogs/2020-02-25-blog1.html
@@ -1,31 +1,76 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Blog1
-        </title>
-    </head>
 
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Claudio Surmon">
+    <title>
+        As we may think
+    </title>
+</head>
+
+<body>
+    <nav>
         <a href="../index.html">Home</a>
-        <h1>
-            Blog 1 name
-        </h1>
-
+        <a href="../about/me.html">About</a>
+        <a href="blog-index.html">Blogs</a>
+        <a href="../images/Gallery-index.html">Gallery</a>
+    </nav>
+    <article>
+        <header>
+            <h1>
+                As we may retroactively think.
+            </h1>
+            <p>
+                by Claudio Surmon
+            </p>
+        </header>
+        <p>
+            “As we may think”, was an essay written in 1945 by Vannevar Bush in which he speculated about the aspects of
+            life in an information society. One of the most influential visions he had was of the memex and its use in
+            storing information for ease of access, among some other some other ideas.
+        </p>
+        <h2>Vannevar Bush</h2>
+        <p>
+            Vannevar Bush was an American engineer who headed the office of the U.S. Scientific Research and Development
+            which carried out the research for, among other things, the Manhattan project.
+        </p>
+        <h2>The MEMEX</h2>
+        <p>
+            Not to be confused with a meme for people from generation ‘X’, the “memex” was a thought of to be a device
+            into which a person could compress and store all their books, records and other information. This
+            information would be stored on microtape and then subsequently projected, so that the storage would remain
+            small and compact. Users could record associative links between articles which could then be shared. This
+            idea of the associative link is credited as the inspiration for the hypertext system created in the 1960’s.
+        </p>
         <h2>
-            Subtext with witty joke
+            Today’s MEMEX
         </h2>
-
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquet iaculis vehicula. Nullam sagittis aliquam felis, id auctor augue lacinia quis. Nunc elementum sem nec vestibulum fermentum. Integer quis lectus id justo gravida consectetur. Donec ullamcorper eros vitae ante dapibus pharetra. Praesent iaculis commodo ante, id sagittis odio rutrum vel. Suspendisse aliquet ornare risus. Ut ornare nisl quis lacus dignissim, ac molestie nulla laoreet. In vitae imperdiet nibh. Donec suscipit hendrerit gravida. Vestibulum urna risus, tincidunt at neque et, consectetur cursus odio. Duis dignissim tempus dolor et cursus.
+            The system’s memory is very reminiscent of resources like Wikipedia, in which hyperlinks allow readers to
+            find associated articles or do deep dives on certain topics.
         </p>
-
-        <!-- Image code -->
-        <img src="../images/test.jpg" alt="Mood">
-
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquet iaculis vehicula. Nullam sagittis aliquam felis, id auctor augue lacinia quis. Nunc elementum sem nec vestibulum fermentum. Integer quis lectus id justo gravida consectetur. Donec ullamcorper eros vitae ante dapibus pharetra. Praesent iaculis commodo ante, id sagittis odio rutrum vel. Suspendisse aliquet ornare risus. Ut ornare nisl quis lacus dignissim, ac molestie nulla laoreet. In vitae imperdiet nibh. Donec suscipit hendrerit gravida. Vestibulum urna risus, tincidunt at neque et, consectetur cursus odio. Duis dignissim tempus dolor et cursus.
+            The window on the top of the system that would allow for the user to input longhand notes, photos or
+            articles into the photographic memory is reminiscent of flatbed scanners.
         </p>
+        <p>
+            All in all the inventions thought of by Vannevar in this essay are wonderfully archaic in their design, but
+            beautifully futuristic in their function, it allows us to wonder what technology will be like in another 50
+            years.
+        </p>
+        <h2>
+            References
+        </h2>
+        <p>
 
-    </body>
+            V. Bush, “As we may think,” The Atlantic, pp. 1-10, 1945.
+        </p>
+    </article>
+    <footer>
+        <a href=""> previous</a>
+        <a href="">next</a>
+    </footer>
+</body>
+
 </html>
