--- a/index.html
+++ b/index.html
@@ -1,44 +1,31 @@
-
-
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      Claudio's Website
-    </title>
-  </head>
-  <body style = 
-  "background-color:#b52b65;
-  margin: 0px;
-  padding: 10px;
-  border-style: solid;
-  border-width: 10px;
-  border-left-width: 10px;
-  border-right-width:10px;
-  border-color:#621055;">
-  <nav style = "padding: 5px; background-color: #ed6663;">
-    <a href="blogs/blog-index.html">About</a>
+
+<head>
+  <title>
+    Claudio's Website
+  </title>
+</head>
+
+<body>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about/me.html">About</a>
     <a href="blogs/blog-index.html">Blogs</a>
     <a href="images/Gallery-index.html">Gallery</a>
   </nav>
-  
+  <header>
+    <h1>Giovanni Suzzi</h1>
+    <h2>The freelance mercenary turned freelance coder</h2>
+  </header>
+
   <article>
-    <h1 style="font-family:Arial, Helvetica, sans-serif;
-      font-size:25px;
-      text-align:center;
-      color: azure;
-      background-color:#ffa372;
-      margin: 0px;
-      padding: 20px;
-      border-style: solid;
-      border-width: 10px;
-      border-left-width: 10px;
-      border-right-width:10px;
-      border-color:#ed6663;"
-      > 
-        Hello World! Welcome to my website
-    </h1>
+    <h2>
+      Latest blog
+    </h2>
+    <a href="blogs/blog-index.html">Blog</a>
   </article>
-  
-  </body>
+
+</body>
+
 </html>
