More formatting and editting of blogs

--- a/blogs/2020-02-25-blog1.html
+++ b/blogs/2020-02-25-blog1.html
@@ -25,6 +25,14 @@
                 by Claudio Surmon
             </p>
         </header>
+        <figure>
+            <img src="../images/Vannevar_Bush_portrait.jpg" alt="Portrait of Vannevar Bush">
+            <figcaption>
+                Vannevar Bush at a desk
+                </br>
+                From "OEM Defence" during World War 2, United States Treasury, public domain.
+            </figcaption>
+        </figure>
         <p>
             “As we may think”, was an essay written in 1945 by Vannevar Bush in which he speculated about the aspects of
             life in an information society. One of the most influential visions he had was of the memex and its use in
@@ -69,7 +77,7 @@
     </article>
     <footer>
         <a href=""> previous</a>
-        <a href="">next</a>
+        <a href="2020-02-26-blog2.html">next</a>
     </footer>
 </body>
 
