--- a/blogs/blog-index.html
+++ b/blogs/blog-index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Blog Index
-        </title>
-    </head>
 
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <title>
+        Blog Index
+    </title>
+</head>
+
+<body>
+    <header>
         <nav>
             <a href="../index.html">Home</a>
+            <a href="../about/me.html">About</a>
+            <a href="blog-index.html">Blogs</a>
+            <a href="../images/Gallery-index.html">Gallery</a>
         </nav>
+
         <h1>
             Blog index
         </h1>
-        <a href="2020-02-25-blog1.html">Blog 1</a>
-        <br/>
-        <a href="2020-02-26-blog2.html">Blog 2</a>
-        <br/>
-        <a href="2020-02-27-blog3.html">Blog 3</a>
-        <br/>
-        <a href="2020-02-28-blog4.html">Blog 4</a>
+    </header>
+    <ol>
+        <li><a href="2020-02-25-blog1.html">As We May Retroactively Think</a></li>
+        <li><a href="2020-02-26-blog2.html"> The Internet's First Hello World</a></li>
+        <li><a href="2020-02-27-blog3.html"> cout &lt;&lt; "Hello World!" </a></li>
+        <li><a href="2020-02-28-blog4.html"> Semantics of Semantic Markup</a></li>
+    </ol>
+</body>
 
-    </body>
 </html>
