--- a/index.html
+++ b/index.html
@@ -2,29 +2,34 @@
 <html>
 
 <head>
+  <meta charset="UTF-8">
   <title>
-    Claudio's Website
+    Giovanni Suzzi
   </title>
 </head>
 
 <body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about/me.html">About</a>
-    <a href="blogs/blog-index.html">Blogs</a>
-    <a href="images/Gallery-index.html">Gallery</a>
-  </nav>
+
+
   <header>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about/me.html">About</a>
+      <a href="blogs/blog-index.html">Blogs</a>
+      <a href="images/Gallery-index.html">Gallery</a>
+    </nav>
+
     <h1>Giovanni Suzzi</h1>
     <h2>The freelance mercenary turned freelance coder</h2>
+    <img src=images/PlaceHolder.png alt="PlaceHolder Image" longdesc="This is a PlaceHolder" height="256" width="256">
   </header>
 
-  <article>
+  <main>
     <h2>
       Latest blog
     </h2>
-    <a href="blogs/blog-index.html">Blog</a>
-  </article>
+    <a href="blogs/2020-02-28-blog4.html">Blog</a>
+  </main>
 
 </body>
 
