--- a/blogs/blog-index.html
+++ b/blogs/blog-index.html
@@ -20,13 +20,17 @@
         <h1>
             Blog index
         </h1>
+
     </header>
-    <ol>
-        <li><a href="2020-02-25-blog1.html">As We May Retroactively Think</a></li>
-        <li><a href="2020-02-26-blog2.html"> The Internet's First Hello World</a></li>
-        <li><a href="2020-02-27-blog3.html"> cout &lt;&lt; "Hello World!" </a></li>
-        <li><a href="2020-02-28-blog4.html"> Semantics of Semantic Markup</a></li>
-    </ol>
+    <main>
+        <ol>
+            <li><a href="2020-02-25-blog1.html">As We May Retroactively Think</a></li>
+            <li><a href="2020-02-26-blog2.html"> The Internet's First Hello World</a></li>
+            <li><a href="2020-02-27-blog3.html"> cout &lt;&lt; "Hello World!" </a></li>
+            <li><a href="2020-02-28-blog4.html"> Semantics of Semantic Markup</a></li>
+        </ol>
+    </main>
+
 </body>
 
 </html>
