--- a/about/me.html
+++ b/about/me.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="desciption" content="About Giovanni Suzzi">
+    <meta name="author" content="Claudio Surmon">
     <title>
-        About me
+        About Giovanni Suzzi
     </title>
 </head>
 
@@ -17,7 +19,7 @@
             <a href="../images/Gallery-index.html">Gallery</a>
         </nav>
         <h1>
-            About Giovanni Suzzi
+            About - Giovanni Suzzi
         </h1>
     </header>
 
@@ -27,15 +29,18 @@
         <p>
             Giovanni Suzzi is a 54 year old man, born and raised on the outskirts of Trieste in the Fruili-Venezia Giula
             region.
-            </br>
+        </p>
+        <p>
             At 18 he joined the Italian armed forces (Forze Armate Italine) in which he served for 4 years in the
             infantry. He rose to the rank of Caporale maggiore (platoon leader).
-            </br>
+        </p>
+        <p>
             He found out about better prospects in the southern african mercenary industry, giving him the opportunity
             to uproot and move down to the South Africa during the later stages of the South African Border war. Shortly
             after joining as a mercenary, the company was dissolved due to the ending of the war in which they had been
             primarily participating. This left Giovanni stranded halfway across the world.
-            </br>
+        </p>
+        <p>
             Not one to take a fight laying down, he began exploring the various industries in South Africa, eventually
             settling into the Computer Industry around 2000, where he has been ever since. Primarily working
             backend-developmental software engineering jobs.
