--- a/blogs/2020-02-25-blog1.html
+++ b/blogs/2020-02-25-blog1.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="desciption" content="Blog about as we may think">
     <meta name="author" content="Claudio Surmon">
     <title>
-        As we may think
+        As we may retroactively think
     </title>
 </head>
 
