--- a/blogs/2020-02-26-blog2.html
+++ b/blogs/2020-02-26-blog2.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Claudio Surmon">
+    <meta name="desciption" content="Blog about the first message on Arpanet">
     <title>
         The Internet's First Hello World
     </title>
