--- a/blogs/2020-02-27-blog3.html
+++ b/blogs/2020-02-27-blog3.html
@@ -1,31 +1,72 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Blog1
-        </title>
-    </head>
 
-    <body>
-        <a href="../index.html">Home</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Claudio Surmon">
+    <meta name="desciption" content="Blog about Giovanni's Introduction">
+    <title>
+        The Internet's First Hello World
+    </title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="../index.html">Home</a>
+            <a href="../about/me.html">About</a>
+            <a href="blog-index.html">Blogs</a>
+            <a href="../images/Gallery-index.html">Gallery</a>
+        </nav>
+    </header>
+
+    <article>
+
         <h1>
-            Blog 1 name
+            The Internet's First Hello World
         </h1>
+        <p>
+            by Claudio Surmon
+        </p>
 
+        <figure>
+            <img src="../images/Arpanet_logical_map.png" alt="Logical Map of Arpanet circa 1977" width="640"
+                height="458">
+            <figcaption>
+                Logical Map of ARPANET circa 1977
+                </br>
+                From "The Computer History Museam", public domain
+            </figcaption>
+        </figure>
+        <p>
+            Just over 50 years ago, on October 29th, 1969, the very first message was sent across the internet’s
+            precursor, ARPANET. You’d think that such a historic moment in the creation of the internet would yield a
+            profound and thought-provoking greeting, however you’d be disappointed. The first message was intended to be
+            “login” however, the entire system crashed after the ‘o’ was sent.
+        </p>
         <h2>
-            Subtext with witty joke
+            ARPANET?
         </h2>
-
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquet iaculis vehicula. Nullam sagittis aliquam felis, id auctor augue lacinia quis. Nunc elementum sem nec vestibulum fermentum. Integer quis lectus id justo gravida consectetur. Donec ullamcorper eros vitae ante dapibus pharetra. Praesent iaculis commodo ante, id sagittis odio rutrum vel. Suspendisse aliquet ornare risus. Ut ornare nisl quis lacus dignissim, ac molestie nulla laoreet. In vitae imperdiet nibh. Donec suscipit hendrerit gravida. Vestibulum urna risus, tincidunt at neque et, consectetur cursus odio. Duis dignissim tempus dolor et cursus.
+            ARPANET was the first system to utilise technologies that would be foundational to the internet as we know
+            it (such as the TCP/IP protocol). The project was created by the Advanced Research Projects Agency of the US
+            department of defence, with one of its initial purposes for meeting the needs of the militaries control of
+            nuclear threats (the cold war was still in full swing at the time).
+        </p>
+        <p>
+            The initial network consisted of only 4 links, between 3 universities and 1 research institute. And from
+            these small stepping stones, the internet was born.
+
         </p>
 
-        <!-- Image code -->
-        <img src="../images/test.jpg" alt="Mood">
+    </article>
+    <footer>
+        <nav>
+            <a href="2020-02-25-blog1.html"> previous</a>
+            <a href="">next</a>
+        </nav>
 
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquet iaculis vehicula. Nullam sagittis aliquam felis, id auctor augue lacinia quis. Nunc elementum sem nec vestibulum fermentum. Integer quis lectus id justo gravida consectetur. Donec ullamcorper eros vitae ante dapibus pharetra. Praesent iaculis commodo ante, id sagittis odio rutrum vel. Suspendisse aliquet ornare risus. Ut ornare nisl quis lacus dignissim, ac molestie nulla laoreet. In vitae imperdiet nibh. Donec suscipit hendrerit gravida. Vestibulum urna risus, tincidunt at neque et, consectetur cursus odio. Duis dignissim tempus dolor et cursus.
-        </p>
+    </footer>
+</body>
 
-    </body>
 </html>
