--- a/blogs/blog-index.html
+++ b/blogs/blog-index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="desciption" content="Blog index">
+    <meta name="author" content="Claudio Surmon">
     <title>
         Blog Index
     </title>
