--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="desciption" content="Home page">
+  <meta name="author" content="Claudio Surmon">
   <title>
     Giovanni Suzzi
   </title>
