--- a/blogs/2020-02-28-blog4.html
+++ b/blogs/2020-02-28-blog4.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            Blog1
-        </title>
-    </head>
 
-    <body>
-        <a href="../index.html">Home</a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Claudio Surmon">
+    <meta name="desciption" content="Blog about Giovanni's Introduction">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>
+        cout &lt;&lt; "Hello World";
+    </title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="../index.html">Home</a>
+            <a href="../about/me.html">About</a>
+            <a href="blog-index.html">Blogs</a>
+            <a href="../images/Gallery-index.html">Gallery</a>
+        </nav>
+    </header>
+
+    <article>
+
         <h1>
-            Blog 1 name
+            The Internet's First Hello World
         </h1>
-
-        <h2>
-            Subtext with witty joke
-        </h2>
-
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquet iaculis vehicula. Nullam sagittis aliquam felis, id auctor augue lacinia quis. Nunc elementum sem nec vestibulum fermentum. Integer quis lectus id justo gravida consectetur. Donec ullamcorper eros vitae ante dapibus pharetra. Praesent iaculis commodo ante, id sagittis odio rutrum vel. Suspendisse aliquet ornare risus. Ut ornare nisl quis lacus dignissim, ac molestie nulla laoreet. In vitae imperdiet nibh. Donec suscipit hendrerit gravida. Vestibulum urna risus, tincidunt at neque et, consectetur cursus odio. Duis dignissim tempus dolor et cursus.
+            by Claudio Surmon
         </p>
 
-        <!-- Image code -->
-        <img src="../images/test.jpg" alt="Mood">
-
+        <figure>
+            <img src="../images/Placeholder.png" alt="Giovanni at war" width="640" height="458">
+            <figcaption>
+                Giovanni in the italian armed forces
+                </br>
+                Personal Photograph, private use
+            </figcaption>
+        </figure>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquet iaculis vehicula. Nullam sagittis aliquam felis, id auctor augue lacinia quis. Nunc elementum sem nec vestibulum fermentum. Integer quis lectus id justo gravida consectetur. Donec ullamcorper eros vitae ante dapibus pharetra. Praesent iaculis commodo ante, id sagittis odio rutrum vel. Suspendisse aliquet ornare risus. Ut ornare nisl quis lacus dignissim, ac molestie nulla laoreet. In vitae imperdiet nibh. Donec suscipit hendrerit gravida. Vestibulum urna risus, tincidunt at neque et, consectetur cursus odio. Duis dignissim tempus dolor et cursus.
+
         </p>
 
-    </body>
+    </article>
+    <footer>
+        <nav>
+            <a href="2020-02-26-blog2.html"> previous</a>
+            <a href="2020-02-28-blog4.html"> next</a>
+        </nav>
+
+    </footer>
+</body>
+
 </html>
