--- a/blogs/2020-02-26-blog2.html
+++ b/blogs/2020-02-26-blog2.html
@@ -63,7 +63,7 @@
     <footer>
         <nav>
             <a href="2020-02-25-blog1.html"> previous</a>
-            <a href="">next</a>
+            <a href="2020-02-27-blog3.html"> next</a>
         </nav>
 
     </footer>
