--- a/blogs/2020-02-27-blog3.html
+++ b/blogs/2020-02-27-blog3.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="author" content="Claudio Surmon">
     <meta name="desciption" content="Blog about Giovanni's Introduction">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        The Internet's First Hello World
+        cout &lt;&lt; "Hello World";
     </title>
 </head>
 
@@ -30,40 +31,22 @@
         </p>
 
         <figure>
-            <img src="../images/Arpanet_logical_map.png" alt="Logical Map of Arpanet circa 1977" width="640"
-                height="458">
+            <img src="../images/Placeholder.png" alt="Giovanni at war" width="640" height="458">
             <figcaption>
-                Logical Map of ARPANET circa 1977
+                Giovanni in the italian armed forces
                 </br>
-                From "The Computer History Museam", public domain
+                Personal Photograph, private use
             </figcaption>
         </figure>
         <p>
-            Just over 50 years ago, on October 29th, 1969, the very first message was sent across the internet’s
-            precursor, ARPANET. You’d think that such a historic moment in the creation of the internet would yield a
-            profound and thought-provoking greeting, however you’d be disappointed. The first message was intended to be
-            “login” however, the entire system crashed after the ‘o’ was sent.
-        </p>
-        <h2>
-            ARPANET?
-        </h2>
-        <p>
-            ARPANET was the first system to utilise technologies that would be foundational to the internet as we know
-            it (such as the TCP/IP protocol). The project was created by the Advanced Research Projects Agency of the US
-            department of defence, with one of its initial purposes for meeting the needs of the militaries control of
-            nuclear threats (the cold war was still in full swing at the time).
-        </p>
-        <p>
-            The initial network consisted of only 4 links, between 3 universities and 1 research institute. And from
-            these small stepping stones, the internet was born.
 
         </p>
 
     </article>
     <footer>
         <nav>
-            <a href="2020-02-25-blog1.html"> previous</a>
-            <a href="">next</a>
+            <a href="2020-02-26-blog2.html"> previous</a>
+            <a href="2020-02-28-blog4.html"> next</a>
         </nav>
 
     </footer>
