--- a/blogs/2020-02-26-blog2.html
+++ b/blogs/2020-02-26-blog2.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Claudio Surmon">
     <meta name="desciption" content="Blog about the first message on Arpanet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         The Internet's First Hello World
     </title>
