--- a/about/me.html
+++ b/about/me.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="desciption" content="About Giovanni Suzzi">
     <meta name="author" content="Claudio Surmon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         About Giovanni Suzzi
     </title>
