--- a/blogs/2020-02-25-blog1.html
+++ b/blogs/2020-02-25-blog1.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="desciption" content="Blog about as we may think">
     <meta name="author" content="Claudio Surmon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         As we may retroactively think
     </title>
