--- a/blogs/blog-index.html
+++ b/blogs/blog-index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="desciption" content="Blog index">
     <meta name="author" content="Claudio Surmon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
         Blog Index
     </title>
