--- a/about/me.html
+++ b/about/me.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="../index.html">Home</a>
             <a href="../about/me.html">About</a>
-            <a href="../blog-index.html">Blogs</a>
+            <a href="../blogs/blog-index.html">Blogs</a>
             <a href="../images/Gallery-index.html">Gallery</a>
         </nav>
         <h1>
