--- a/blogs/2020-02-27-blog3.html
+++ b/blogs/2020-02-27-blog3.html
@@ -24,10 +24,10 @@
     <article>
 
         <h1>
-            The Internet's First Hello World
+            cout &lt;&lt; "Hello World";
         </h1>
         <p>
-            by Claudio Surmon
+            by Giovanni Suzzi
         </p>
 
         <figure>
