--- a/blogs/2020-02-28-blog4.html
+++ b/blogs/2020-02-28-blog4.html
@@ -7,7 +7,7 @@
     <meta name="desciption" content="Blog about Giovanni's Introduction">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        cout &lt;&lt; "Hello World";
+        Semantics of Semantic Markup
     </title>
 </head>
 
@@ -24,29 +24,34 @@
     <article>
 
         <h1>
-            The Internet's First Hello World
+            Semantics of Semantic Markup
         </h1>
         <p>
             by Claudio Surmon
         </p>
 
-        <figure>
-            <img src="../images/Placeholder.png" alt="Giovanni at war" width="640" height="458">
-            <figcaption>
-                Giovanni in the italian armed forces
-                </br>
-                Personal Photograph, private use
-            </figcaption>
-        </figure>
         <p>
+            Semantics is relating to meaning in language or logic. Semantic markup extends on this idea, by allocating
+            meaning to the various tags used in a markup language such as HTML. Although visually, a lot of tags seem
+            similar or will have the similar properties, on a lower level they are different.]
+        </p>
+        <h2>So what?</h2>
+        <p>Primarily these specialised tags are for bots or programs that assist people (like screen readers). It
+            allows for them to understand what various parts of a webpage are and use the information accordingly. It
+            helps make webpages that both humans and machines can read more easily.
+        </p>
+        <p>
+            A common example is the tags “div” and “span”, these tags are effectively default templates for formatting,
+            however, it does not say anything about the contents contained therein. So better tags to use would be like
+            “article” or “header” (provided it was appropriate).
 
         </p>
 
     </article>
     <footer>
         <nav>
-            <a href="2020-02-26-blog2.html"> previous</a>
-            <a href="2020-02-28-blog4.html"> next</a>
+            <a href="2020-02-27-blog3.html"> previous</a>
+            <a href="2020-02-28-blog5.html"> next</a>
         </nav>
 
     </footer>
