--- a/blogs/blog-index.html
+++ b/blogs/blog-index.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="../index.html">Home</a>
             <a href="../about/me.html">About</a>
-            <a href="blog-index.html">Blogs</a>
+            <a href="">Blogs</a>
             <a href="../images/Gallery-index.html">Gallery</a>
         </nav>
 
@@ -27,10 +27,11 @@
     </header>
     <main>
         <ol>
-            <li><a href="2020-02-25-blog1.html">As We May Retroactively Think</a></li>
-            <li><a href="2020-02-26-blog2.html"> The Internet's First Hello World</a></li>
-            <li><a href="2020-02-27-blog3.html"> cout &lt;&lt; "Hello World!" </a></li>
-            <li><a href="2020-02-28-blog4.html"> Semantics of Semantic Markup</a></li>
+            <li><a href="2020-02-25-blog1.html"> 2020-02-25 &emsp;As We May Retroactively Think </a></li>
+            <li><a href="2020-02-26-blog2.html"> 2020-02-25 &emsp;The Internet's First Hello World</a></li>
+            <li><a href="2020-02-27-blog3.html"> 2020-02-25 &emsp;cout &lt;&lt; "Hello World!" </a></li>
+            <li><a href="2020-02-28-blog4.html"> 2020-02-25 &emsp;Semantics of Semantic Markup</a></li>
+            <li><a href="2020-02-28-blog5.html"> 2020-02-25 &emsp;Meta Meta-data reflection</a></li>
         </ol>
     </main>
 
