--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h2>
       Latest blog
     </h2>
-    <a href="blogs/2020-02-28-blog4.html">Blog</a>
+    <a href="blogs/2020-02-28-blog5.html">Meta meta-data blog post</a>
   </main>
 
 </body>
