--- a/about/me.html
+++ b/about/me.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <a href="../index.html">Home</a>
-            <a href="../about/me.html">About</a>
+            <a href="">About</a>
             <a href="../blogs/blog-index.html">Blogs</a>
             <a href="../images/Gallery-index.html">Gallery</a>
         </nav>
