--- a/images/Gallery-index.html
+++ b/images/Gallery-index.html
@@ -16,8 +16,8 @@
         <nav>
             <a href="../index.html">Home</a>
             <a href="../about/me.html">About</a>
-            <a href="blog-index.html">Blogs</a>
-            <a href="../images/Gallery-index.html">Gallery</a>
+            <a href="../blogs/blog-index.html">Blogs</a>
+            <a href="">Gallery</a>
         </nav>
 
         <h1>
