Mostly Finished for Assignment 1

--- a/blogs/2020-02-28-blog4.html
+++ b/blogs/2020-02-28-blog4.html
@@ -18,6 +18,7 @@
             <a href="../about/me.html">About</a>
             <a href="blog-index.html">Blogs</a>
             <a href="../images/Gallery-index.html">Gallery</a>
+            <a href="../underConstruction.html">Construction Zone</a>
         </nav>
     </header>
 
@@ -33,7 +34,7 @@
         <p>
             Semantics is relating to meaning in language or logic. Semantic markup extends on this idea, by allocating
             meaning to the various tags used in a markup language such as HTML. Although visually, a lot of tags seem
-            similar or will have the similar properties, on a lower level they are different.]
+            similar or will have the similar properties, on a lower level they are different.
         </p>
         <h2>So what?</h2>
         <p>Primarily these specialised tags are for bots or programs that assist people (like screen readers). It
@@ -50,7 +51,7 @@
     </article>
     <footer>
         <nav>
-            <a href="2020-02-27-blog3.html"> previous</a>
+            <a href="2020-02-26-blog2.html"> previous</a>
             <a href="2020-02-28-blog5.html"> next</a>
         </nav>
 
