--- a/blogs/blog-index.html
+++ b/blogs/blog-index.html
@@ -18,6 +18,7 @@
             <a href="../about/me.html">About</a>
             <a href="">Blogs</a>
             <a href="../images/Gallery-index.html">Gallery</a>
+            <a href="../underConstruction.html">Construction Zone</a>
         </nav>
 
         <h1>
@@ -29,7 +30,7 @@
         <ol>
             <li><a href="2020-02-25-blog1.html"> 2020-02-25 &emsp;As We May Retroactively Think </a></li>
             <li><a href="2020-02-26-blog2.html"> 2020-02-25 &emsp;The Internet's First Hello World</a></li>
-            <li><a href="2020-02-27-blog3.html"> 2020-02-25 &emsp;cout &lt;&lt; "Hello World!" </a></li>
+            <!--<li><a href="2020-02-27-blog3.html"> 2020-02-25 &emsp;cout &lt;&lt; "Hello World!" </a></li>-->
             <li><a href="2020-02-28-blog4.html"> 2020-02-25 &emsp;Semantics of Semantic Markup</a></li>
             <li><a href="2020-02-28-blog5.html"> 2020-02-25 &emsp;Meta Meta-data reflection</a></li>
         </ol>
