--- a/images/Gallery-index.html
+++ b/images/Gallery-index.html
@@ -18,16 +18,20 @@
             <a href="../about/me.html">About</a>
             <a href="../blogs/blog-index.html">Blogs</a>
             <a href="">Gallery</a>
+            <a href="../underConstruction.html">Construction Zone</a>
         </nav>
 
         <h1>
             Gallery index
         </h1>
+        <h2>
+            Currently under Construction
+        </h2>
 
     </header>
     <main>
         <ul>
-            <li></li>
+            <li>Awaiting javascript</li>
         </ul>
     </main>
 
