--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a href="about/me.html">About</a>
       <a href="blogs/blog-index.html">Blogs</a>
       <a href="images/Gallery-index.html">Gallery</a>
+      <a href="underConstruction.html">Construction Zone</a>
     </nav>
 
     <h1>Giovanni Suzzi</h1>
