--- a/about/me.html
+++ b/about/me.html
@@ -18,6 +18,7 @@
             <a href="">About</a>
             <a href="../blogs/blog-index.html">Blogs</a>
             <a href="../images/Gallery-index.html">Gallery</a>
+            <a href="../underConstruction.html">Construction Zone</a>
         </nav>
         <h1>
             About - Giovanni Suzzi
@@ -45,6 +46,10 @@
             Not one to take a fight laying down, he began exploring the various industries in South Africa, eventually
             settling into the Computer Industry around 2000, where he has been ever since. Primarily working
             backend-developmental software engineering jobs.
+        </p>
+        <p>
+            Eventually he went on to produce his own software engineering company and has recently began web
+            development. The result of this expansion is the website you're currently reading.
         </p>
     </main>
 </body>
