--- a/blogs/2020-02-25-blog1.html
+++ b/blogs/2020-02-25-blog1.html
@@ -17,6 +17,7 @@
         <a href="../about/me.html">About</a>
         <a href="blog-index.html">Blogs</a>
         <a href="../images/Gallery-index.html">Gallery</a>
+        <a href="../underConstruction.html">Construction Zone</a>
     </nav>
     <article>
         <header>
