--- a/blogs/2020-02-26-blog2.html
+++ b/blogs/2020-02-26-blog2.html
@@ -18,6 +18,7 @@
             <a href="../about/me.html">About</a>
             <a href="blog-index.html">Blogs</a>
             <a href="../images/Gallery-index.html">Gallery</a>
+            <a href="../underConstruction.html">Construction Zone</a>
         </nav>
     </header>
 
@@ -64,7 +65,7 @@
     <footer>
         <nav>
             <a href="2020-02-25-blog1.html"> previous</a>
-            <a href="2020-02-27-blog3.html"> next</a>
+            <a href="2020-02-28-blog4.html"> next</a>
         </nav>
 
     </footer>
