--- a/blogs/2020-02-27-blog3.html
+++ b/blogs/2020-02-27-blog3.html
@@ -18,6 +18,7 @@
             <a href="../about/me.html">About</a>
             <a href="blog-index.html">Blogs</a>
             <a href="../images/Gallery-index.html">Gallery</a>
+            <a href="../underConstruction.html">Construction Zone</a>
         </nav>
     </header>
 
