Mostly Finished for Assignment 1

--- a/about/me.html
+++ b/about/me.html
@@ -26,8 +26,9 @@
     </header>
 
     <main>
-        <img src=../images/PlaceHolder.png alt="PlaceHolder Image" longdesc="This is a PlaceHolder" height="384"
-            width="256">
+        <img src=../images/dadWithGun.jpg alt="PlaceHolder Image" longdesc="This is a PlaceHolder" width="384">
+
+        <h3>Early life and Career</h3>
         <p>
             Giovanni Suzzi is a 54 year old man, born and raised on the outskirts of Trieste in the Fruili-Venezia Giula
             region.
