--- a/underConstruction.html
+++ b/underConstruction.html
@@ -54,7 +54,7 @@
         <p>
             This character is meant to be an amalgamation of my father and my grandfather. Combining the military
             aspects of the former and the engineering industriousness of the latter, as well as some elements of their
-            lives.
+            lives. The history of the character is in the <a href=about/me.html>about</a> page
         </p>
     </main>
 
