Mostly Finished for Assignment 1

--- a/about/me.html
+++ b/about/me.html
@@ -26,7 +26,15 @@
     </header>
 
     <main>
-        <img src=../images/dadWithGun.jpg alt="PlaceHolder Image" longdesc="This is a PlaceHolder" width="384">
+        <figure>
+            <img src=../images/dadWithGun.jpg alt="William Surmon holding machine gun"
+                longdesc="Image of William Surmon holding browning machine gun" width="384">
+            <figcaption>
+                Placeholder photo of my father, William Surmon, while serving in the light horse regiment in the border
+                wars. Credit: William Surmon. Private use.
+            </figcaption>
+        </figure>
+
 
         <h3>Early life and Career</h3>
         <p>
