Finished for Assignment 1

--- a/about/me.html
+++ b/about/me.html
@@ -30,8 +30,10 @@
             <img src=../images/dadWithGun.jpg alt="William Surmon holding machine gun"
                 longdesc="Image of William Surmon holding browning machine gun" width="384">
             <figcaption>
-                Placeholder photo of my father, William Surmon, while serving in the light horse regiment in the border
-                wars. Credit: William Surmon. Private use.
+                Placeholder photo of my father, William Surmon, while serving in the light horse regiment in the South
+                African border wars.
+                </br>
+                Credit: William Surmon. Private use.
             </figcaption>
         </figure>
 
