--- a/underConstruction.html
+++ b/underConstruction.html
@@ -56,6 +56,16 @@
             aspects of the former and the engineering industriousness of the latter, as well as some elements of their
             lives. The history of the character is in the <a href=about/me.html>about</a> page
         </p>
+        <figure>
+            <img src=images/dadWithGun.jpg alt="William Surmon holding machine gun"
+                longdesc="Image of William Surmon holding browning machine gun" width="384">
+            <figcaption>
+                Placeholder photo of my father, William Surmon, while serving in the light horse regiment in the South
+                African border wars. This image helps capture part of the character i wish to create.
+                </br>
+                Credit: William Surmon. Private use.
+            </figcaption>
+        </figure>
     </main>
 
 </body>
